[package]
name = "tugas-kripto-1a"
version = "0.1.0"
edition = "2021"
description = "Tugas Kriptografi 1A"
license = "Apache-2.0"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.yew]
version = "0.20"
features = ["csr"]

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlTextAreaElement",
  "HtmlInputElement",
  "FileList",
  "File",
]

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.js-sys]
version = "0.3"

[dependencies.num-integer]
version = "^0.1"
default-features = false
